--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -155,6 +155,8 @@ table {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top center;
+    position: relative;
+    z-index: 5;
 }
 
 .welcome__text {
@@ -250,7 +252,7 @@ table {
     position: absolute;
     left: -687px;
     bottom: -200px;
-    z-index: 10;
+    z-index: 14;
 }
 
 .features__girl {
@@ -258,6 +260,7 @@ table {
     position: absolute;
     left: -501px;
     bottom: -150px;
+    z-index: 13;
 }
 
 .features__finn {
@@ -265,6 +268,7 @@ table {
     position: absolute;
     left: -320px;
     bottom: -160px;
+    z-index: 13;
 }
 
 .features__reactoonz {
@@ -272,6 +276,7 @@ table {
     position: absolute;
     left: -186px;
     top: -110px;
+    z-index: 12;
 }
 
 .features__firehead {
@@ -895,10 +900,12 @@ table {
 
     .features__robin {
         left: -400px;
+        z-index: 10;
     }
 
     .features__girl {
         left: -300px;
+        z-index: 9;
     }
 
     .features__finn {
